  * debian/control, debian/mans/nova-conductor.8, debian/nova-conductor.init,
    debian/nova-conductor.install, debian/nova-conductor.logrotate
    debian/nova-conductor.manpages, debian/nova-conductor.postrm
    debian/nova-conductor.upstart.in: Add nova-conductor service.
  * debian/control: Add python-fixtures as a build deps.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 23 Nov 2012 09:32:05 -0600

nova (2012.2-0ubuntu5) quantal; urgency=low

  [ Adam Gandelman ]
  * Move management of /var/lib/nova/volumes from nova-common to
    nova-volume.  Ensure it has proper permissions. (LP: #1065320)
  * debian/patches/avoid_setuptools_git_dependency.patch:  Remove
    setuptools_git from tools/pip-requires to avoid it being automatically
    added to python-nova's runtime dependencies. (LP: #1059907) 

  [ Chuck Short ]
  * debian/patches/rbd-security.patch: Support override of ceph rbd
    user and secret in nova-compute. (LP: #1065883)
  * debian/patches/ubuntu/fix-libvirt-firewall-slowdown.patch: Fix
    refreshing of security groups in libvirt not to block on RPC calls.
    (LP: #1062314)
  * debian/patches/ubuntu/fix-ec2-volume-id-mappings.patch: Read deleted
    snapshot and volume id mappings. (LP: #1065785)

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 12 Oct 2012 12:35:01 -0500

nova (2012.2-0ubuntu4) quantal; urgency=low

  * debian/patches/ubuntu/ubuntu-fix-ec2-instance-id-mappings.patch:
    Backport from trunk, Set read_deleted='yes' for instance_id_mappings. 
    (LP: #1061166)

 -- Chuck Short <zulcss@ubuntu.com>  Tue, 09 Oct 2012 11:51:15 -0500

nova (2012.2-0ubuntu3) quantal; urgency=low

  * nova-xvpvncproxy, nova-novncproxy: Add missing .install, .logrotate,
    .postrm, manpages and upstart jobs (LP: #1060336)
  * debian/{rules, nova-volume.install}: Rename nova_tgt to nova_tgt.conf so
    that it is actually loaded by tgt. (LP: #1060422)

 -- Adam Gandelman <adamg@canonical.com>  Tue, 02 Oct 2012 13:44:35 -0700
