@@ -1,0 +1,1 @@
+nova-compute-xcp: empty-binary-package
